[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://EnemyBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/ufoGreen.png" type="Texture" id=3]
[ext_resource path="res://EnemyPaths.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/enemy_laser.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/enemy_hit.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 36.7521

[sub_resource type="Animation" id=2]

resource_name = "hit"
length = 0.25
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "rotate"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_deg")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="Enemy" type="Area2D" groups=[
"enemies",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

rotation = 2.68493
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visible = false
shape = SubResource( 1 )

[node name="EnemyPaths" parent="." instance=ExtResource( 4 )]

[node name="ShootTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="PulseTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/hit = SubResource( 2 )
anims/rotate = SubResource( 3 )
playback/active = true
playback/speed = 0.6
blend_times = [  ]
autoplay = "rotate"
_sections_unfolded = [ "Playback Options", "playback" ]

[node name="LaserSound" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 5 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HitSound" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 6 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]


